@@ -1,3 +1,5 @@
+- New plugin element <valueslot> for selecting arbitrary string values (otherwise almost identical to <varslot>)
+	TODO: document, complement with valueselector (sort of pointless without)
 - <varslots> can be set to accept the same object several times. Used in scatterplot plugin.
 - New R function rk.embed.device() for manually embedding graphics devices in RKWard
 - Fixed: R backend would exit immediately, without meaningful error message, if there is an error in .Rprofile (or Rprofile.site)
